--- a/demo-service/src/main/resources/bootstrap-cloud.yml
+++ b/demo-service/src/main/resources/bootstrap-cloud.yml
@@ -1,7 +1,7 @@
 spring:
   cloud:
     config:
-      uri: https://ih-config-devspace-service.apps.adp.allianz/
+      uri: https://demo-config-service.apps.adp.allianz/
 
 eureka:
   client:
