--- a/demo-config/manifest-dev.yml
+++ b/demo-config/manifest-dev.yml
@@ -1,8 +1,7 @@
 applications:
-- name: demo-service
+- name: ih-config-service
   memory: 1024MB
-  host: demo-service
-  path: target/aztech-demo-0.0.1-SNAPSHOT.jar
-  buildpack: java_buildpack_4_16_1
+  host: ih-config-dev-service
+  path: target/config-service-0.0.1-SNAPSHOT.jar
   env:
       JAVA_OPTS: "-Dhttp.proxyHost=surf.proxy.agis.allianz -Dhttp.proxyPort=8080 -Dhttps.proxyHost=surf.proxy.agis.allianz -Dhttps.proxyPort=8080 -Duser.timezone=Europe/Dublin"
