--- a/demo-config/manifest-dev.yml
+++ b/demo-config/manifest-dev.yml
@@ -1,7 +1,8 @@
 applications:
-- name: ih-config-service
+- name: demo-config-service
   memory: 1024MB
-  host: ih-config-dev-service
-  path: target/config-service-0.0.1-SNAPSHOT.jar
+  host: demo-config-service-dev
+  path: target/demo-config-0.0.1-SNAPSHOT.jar
+  buildpack: java_buildpack_4_16_1
   env:
-      JAVA_OPTS: "-Dhttp.proxyHost=surf.proxy.agis.allianz -Dhttp.proxyPort=8080 -Dhttps.proxyHost=surf.proxy.agis.allianz -Dhttps.proxyPort=8080 -Duser.timezone=Europe/Dublin"
+      JAVA_OPTS: "-Dspring.profiles.active=native -Dhttp.proxyHost=surf.proxy.agis.allianz -Dhttp.proxyPort=8080 -Dhttps.proxyHost=surf.proxy.agis.allianz -Dhttps.proxyPort=8080 -Duser.timezone=Europe/Dublin"
